[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

dependencies = ["matplotlib",
              "networkx",
              "numpy",
              "pandas",
              "scipy",
              "seaborn",
              "scikit-learn",
              "reportlab",
              "python-louvain"
              ]
