[metadata]
name = nest
version = 0.9

[options]
install_requires = 
    matplotlib
    networkx
    numpy
    pandas
    scipy
    seaborn
    scikit-learn
    reportlab
    python-louvain

[options.entry_points]
console_scripts = 
  nest = nest.run:main

[options.packages.find]
where = nest

[options.package_data]
nest.renderer =
    *.png
    *.css

